Changed remote config dialog icon input type to text

--- a/templates/remoteDialog.html
+++ b/templates/remoteDialog.html
@@ -3,7 +3,7 @@
     <form>
       <label for="name">Name</label><input type="text" name="name"/>
       <br/>
-      <label for="icon">Icon</label><input type="file" name="icon"/>
+      <label for="icon">Icon</label><input type="text" name="icon"/>
       <br/>
       <label for="author">Author</label><input type="text" name="author"/>
       <br/>
