Added info to about.html and added a title to the page.

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,15 +1,17 @@
 <div id="aboutDialog" title="About..." style="display: none;">
   <p>
-  This project was created using the following libraries:
-  <ul>
-    <li><a href="http://twitter.github.com/bootstrap/">Twitter Bootstrap</a> (for look & feel)</li>
-    <li><a href="http://www.jquery.org">jQuery</a></li>
-    <li><a href="http://www.jqueryui.com">jQuery-UI</a> (dialog, selectable)</li>
-    <li><a href="http://www.knockoutjs.com">KnockoutJS</a></li>
-  </ul>
-  <div>
-  I do not own nor do I have any affiliation with the wonderful people at Unified Remote.
-  <a href="http://www.unifiedremote.com">Unified Intents AB © 2012</a>
-  </div>
+    This project was created using the following libraries:
+    <ul>
+      <li><a href="http://twitter.github.com/bootstrap/">Twitter Bootstrap</a> (for look & feel)</li>
+      <li><a href="http://www.jquery.org">jQuery</a></li>
+      <li><a href="http://www.jqueryui.com">jQuery-UI</a> (dialog, selectable)</li>
+      <li><a href="http://www.knockoutjs.com">KnockoutJS</a></li>
+    </ul>
+    <div>
+      I do not own nor do I have any affiliation with the wonderful people at Unified Remote.
+      <a href="http://www.unifiedremote.com">Unified Intents AB © 2012</a>
+    </div>
+    <div>A write-up on how this app came to be and the rest of my HTPC remote solution can be found <a href="http://csmatt.com/notes/?p=32">here</a>.</div>
+    <div>The source for this project is maintained <a href="https://github.com/csmatt/remote-creator">here</a>.</div>
   </p>
 </div>
