--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <title>Remote Creator - by Matt Defenthaler</title>
     <link rel="stylesheet" href="http://yui.yahooapis.com/2.9.0/build/reset/reset-min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootswatch/2.1.1/simplex/bootstrap.min.css">
     <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.0/themes/ui-darkness/jquery-ui.css">
