Fixed bug in generated config due to not having the </ur:Remote> closing tag. Added an upload wrapper script to minify js & css before updating the live app. Made a few other changes to reduce the size of the js.

--- a/templates/controlConfig.html
+++ b/templates/controlConfig.html
@@ -14,6 +14,10 @@
   <input type="radio" value="center" data-bind="checked: textAlignSelection">center</input>
   <input type="radio" value="right" data-bind="checked: textAlignSelection">right</input>
 </div>
+<!--<div>
+  <input type="text" data-bind="value: height" style="width: 50px;"></input>
+<button data-bind="click: function(){height(height()+1);$parent.updateHeight();}">+</button>
+</div>-->
 <div data-bind="ifEnabled: 'checked'">
   <input type="checkbox" data-bind="checked: _checked">Enabled By Default</input>
 </div>
