--- a/templates/index.html
+++ b/templates/index.html
@@ -4,10 +4,13 @@
     <link rel="stylesheet" href="http://yui.yahooapis.com/2.9.0/build/reset/reset-min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootswatch/2.1.1/simplex/bootstrap.min.css">
     <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.0/themes/ui-darkness/jquery-ui.css">
-    <!-- local css 
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/jquery-ui.css">-->
+    {% if LIVE %}
     <link rel="stylesheet" href="css/main-min.css">
+    {% else %}
+    <!--<link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/jquery-ui.css">-->
+    <link rel="stylesheet" href="css/main.css">
+    {% endif %}
   </head>
   <body>
     <div id="main">
@@ -94,11 +97,14 @@
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.21/jquery-ui.min.js"></script>
     <script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/knockout/knockout-2.2.0.js"></script>
     <script type="text/javascript" src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/js/bootstrap.min.js"></script>
+    {% if LIVE %}
+    <script type="text/javascript" src="js/all-min.js"></script>
+    {% else %}
     <!-- local js files 
     <script type="text/javascript" src="js/lib/jquery.js"></script>
     <script type="text/javascript" src="js/lib/jquery-ui.js"></script>
     <script type="text/javascript" src="js/lib/knockout.js"></script>
-    <script type="text/javascript" src="js/lib/bootstrap/js/bootstrap.js"></script>
+    <script type="text/javascript" src="js/lib/bootstrap/js/bootstrap.js"></script>-->
     <script type="text/javascript" src="js/kocustom.js"></script>
     <script type="text/javascript" src="js/generate.js"></script>
     <script type="text/javascript" src="js/actions.js"></script>
@@ -107,7 +113,7 @@
     <script type="text/javascript" src="js/widget.js"></script>
     <script type="text/javascript" src="js/widgetRow.js"></script>
     <script type="text/javascript" src="js/controller.js"></script>
-    <script type="text/javascript" src="js/main.js"></script>-->
-    <script type="text/javascript" src="js/all-min.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
+    {% endif %}
   </body>
 </html>
