--- a/templates/index.html
+++ b/templates/index.html
@@ -23,8 +23,8 @@
 	      <b class="caret"></b>
 	    </a>
 	    <ul class="dropdown-menu">
-	      <li><a href="#" data-bind="click: createWidget">Add Widget</a></li>
-	      <li><a href="#" data-bind="click: createWidgetRow">Add Row</a></li>
+	      <li><a href="#" data-bind="click: _onCreateWidget">Add Widget</a></li>
+	      <li><a href="#" data-bind="click: _onCreateWidgetRow">Add Row</a></li>
 	      <li data-bind="if: widgetRows().length > 1"><a href="#" data-bind="click: deleteRow">Delete Row</a></li>
 	    </ul>
 	  </li>
@@ -35,6 +35,7 @@
 	    <ul class="dropdown-menu">
 	      <li><a href="#" data-bind="click: editRemote">Edit Remote</a></li>
 	      <li><a href="#" data-bind="click: showGeneratedConfigDialog">Generate Config</a></li>
+	      <li><a href="#" data-bind="click: showImportConfigDialog">Import Config</a></li>
 	    </ul>
 	  </li>
 	  <li>
@@ -87,6 +88,9 @@
     <div id="generatedConfigDialog" title="Custom Remote XML" style="display:none;">
       <textarea id="generatedConfig" data-bind="if: $root"></textarea>      
     </div>
+    <div id="importConfigDialog" title="Paste an exist config's XML below." style="display:none;">
+      <textarea id="importConfigTextBox"></textarea>
+    </div>
     {% include "xmlConfig.html" %}
     {% include "remoteDialog.html" %}
     {% include "actionConfig.html" %}
@@ -106,6 +110,7 @@
     <script type="text/javascript" src="js/lib/knockout.js"></script>
     <script type="text/javascript" src="js/lib/bootstrap/js/bootstrap.js"></script>-->
     <script type="text/javascript" src="js/kocustom.js"></script>
+    <script type="text/javascript" src="js/parser.js"></script>
     <script type="text/javascript" src="js/generate.js"></script>
     <script type="text/javascript" src="js/actions.js"></script>
     <script type="text/javascript" src="js/utils.js"></script>
